--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -297,7 +297,7 @@
   <img border="0" alt="Volkwagen" src="assets/vw.png" width="100" height="100">
 </div> -->
 
-<!-- <app-part-list></app-part-list> -->
+<app-part-list></app-part-list>
 <app-cart></app-cart>
 
 
