--- a/frontend/src/app/part-list/part-list.component.html
+++ b/frontend/src/app/part-list/part-list.component.html
@@ -5,53 +5,41 @@
 
 <table mat-table
        matSort
-       [dataSource]="dataSource" multiTemplateDataRows
+       [dataSource]="dataSource"
+       multiTemplateDataRows
        class="mat-elevation-z8">
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Pavadinimas </th>
-    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
+    <th mat-header-cell *matHeaderCellDef> {{title[column]}} </th>
+    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button color="primary" (click)="addToCart(element)">Nupirkti</button>
+    </td>
   </ng-container>
 
-  <ng-container matColumnDef="brand">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Markė </th>
-    <td mat-cell *matCellDef="let row"> {{row.brand}}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="year">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Metai </th>
-    <td mat-cell *matCellDef="let row"> {{row.year}}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Kaina </th>
-    <td mat-cell *matCellDef="let row"> {{row.price}}</td>
-  </ng-container>
+  <!--  Expanded Content Column - The detail row is made up of this one column that spans across all columns-->
+<!--    <ng-container matColumnDef="expandedDetail">-->
+<!--      <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">-->
+<!--        <div class="example-element-detail"-->
+<!--             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">-->
+<!--          <div class="example-element-diagram">-->
+<!--            <div class="example-element-position"> {{element.position}} </div>-->
+<!--            <div class="example-element-symbol"> {{element.symbol}} </div>-->
+<!--            <div class="example-element-name"> {{element.name}} </div>-->
+<!--            <div class="example-element-weight"> {{element.weight}} </div>-->
+<!--          </div>-->
+<!--          <div class="example-element-description">-->
+<!--            {{element.description}}-->
+<!--            <span class="example-element-description-attribution"> &#45;&#45; Wikipedia </span>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </td>-->
+<!--    </ng-container>-->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-  <!--  Expanded Content Column - The detail row is made up of this one column that spans across all columns-->
-  <!--  <ng-container matColumnDef="expandedDetail">-->
-  <!--    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">-->
-  <!--      <div class="example-element-detail"-->
-  <!--           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">-->
-  <!--        <div class="example-element-diagram">-->
-  <!--          <div class="example-element-position"> {{element.position}} </div>-->
-  <!--          <div class="example-element-symbol"> {{element.symbol}} </div>-->
-  <!--          <div class="example-element-name"> {{element.name}} </div>-->
-  <!--          <div class="example-element-weight"> {{element.weight}} </div>-->
-  <!--        </div>-->
-  <!--        <div class="example-element-description">-->
-  <!--          {{element.description}}-->
-  <!--          <span class="example-element-description-attribution"> &#45;&#45; Wikipedia </span>-->
-  <!--        </div>-->
-  <!--      </div>-->
-  <!--    </td>-->
-  <!--  </ng-container>-->
-
-<!--  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>-->
-<!--  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"-->
+<!--  <tr mat-row *matRowDef="let element; columns: displayedColumns;"-->
 <!--      class="example-element-row"-->
 <!--      [class.example-expanded-row]="expandedElement === element"-->
 <!--      (click)="expandedElement = expandedElement === element ? null : element">-->
