--- a/frontend/src/app/part-list/part-list.component.html
+++ b/frontend/src/app/part-list/part-list.component.html
@@ -3,6 +3,10 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 </mat-form-field>
 
+<button mat-button color="primary" (click)="toggle('BMW')"> BMW {{toggles.BMW}}</button>
+<button mat-button color="primary" (click)="toggle('Audi')"> Audi {{toggles.Audi}}</button>
+<button mat-button color="primary" (click)="toggle('VW')"> VW {{toggles.VW}}</button>
+
 <table mat-table
        matSort
        [dataSource]="dataSource"
@@ -12,37 +16,33 @@
   <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
     <th mat-header-cell *matHeaderCellDef> {{title[column]}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    <td mat-cell *matCellDef="let element">
-      <button mat-button color="primary" (click)="addToCart(element)">Nupirkti</button>
+  </ng-container>
+
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+      <div class="example-element-detail"
+           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="example-element-diagram">
+          <div class="example-element-position"> {{element.position}} </div>
+          <div class="example-element-symbol"> {{element.symbol}} </div>
+          <div class="example-element-name"> {{element.name}} </div>
+          <div class="example-element-weight"> {{element.weight}} </div>
+        </div>
+        <div class="example-element-description">
+          {{element.description}}
+          <span class="example-element-description-attribution"> -- Wikipedia </span>
+        </div>
+      </div>
     </td>
   </ng-container>
 
-  <!--  Expanded Content Column - The detail row is made up of this one column that spans across all columns-->
-<!--    <ng-container matColumnDef="expandedDetail">-->
-<!--      <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">-->
-<!--        <div class="example-element-detail"-->
-<!--             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">-->
-<!--          <div class="example-element-diagram">-->
-<!--            <div class="example-element-position"> {{element.position}} </div>-->
-<!--            <div class="example-element-symbol"> {{element.symbol}} </div>-->
-<!--            <div class="example-element-name"> {{element.name}} </div>-->
-<!--            <div class="example-element-weight"> {{element.weight}} </div>-->
-<!--          </div>-->
-<!--          <div class="example-element-description">-->
-<!--            {{element.description}}-->
-<!--            <span class="example-element-description-attribution"> &#45;&#45; Wikipedia </span>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </td>-->
-<!--    </ng-container>-->
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr (click)="addToCart(row)" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-<!--  <tr mat-row *matRowDef="let element; columns: displayedColumns;"-->
-<!--      class="example-element-row"-->
-<!--      [class.example-expanded-row]="expandedElement === element"-->
-<!--      (click)="expandedElement = expandedElement === element ? null : element">-->
-<!--  </tr>-->
-<!--  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
+  <!--  <tr mat-row *matRowDef="let element; columns: displayedColumns;"-->
+  <!--      class="example-element-row"-->
+  <!--      [class.example-expanded-row]="expandedElement === element"-->
+  <!--      (click)="expandedElement = expandedElement === element ? null : element">-->
+  <!--  </tr>-->
+  <!--  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
 </table>
