Minor fixes to car brand toggling.

--- a/frontend/src/app/part-list/part-list.component.html
+++ b/frontend/src/app/part-list/part-list.component.html
@@ -3,9 +3,9 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 </mat-form-field>
 
-<button mat-button color="primary" (click)="toggle('BMW')"> BMW {{toggles.BMW}}</button>
-<button mat-button color="primary" (click)="toggle('Audi')"> Audi {{toggles.Audi}}</button>
-<button mat-button color="primary" (click)="toggle('VW')"> VW {{toggles.VW}}</button>
+<button mat-button color="primary" (click)="toggle('BMW')">BMW</button>
+<button mat-button color="primary" (click)="toggle('Audi')">Audi</button>
+<button mat-button color="primary" (click)="toggle('VW')">VW</button>
 
 <table mat-table
        matSort
