--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,12 @@
 
 <style>
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: 50%;
+    }
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
@@ -291,14 +298,12 @@
 </style>
 
 <h1>Parts Proper</h1>
-<!-- <div>
-  <img border="0" alt="BMW" src="assets/bmw.png" width="100" height="100">
-  <img border="0" alt="Audi" src="assets/audi.jpeg" width="100" height="100">
-  <img border="0" alt="Volkwagen" src="assets/vw.png" width="100" height="100">
-</div> -->
+<div class="row">
+    <div class="column"><app-part-list></app-part-list></div>
+    <div class="column"><app-cart></app-cart></div>
+</div>
 
-<app-part-list></app-part-list>
-<app-cart></app-cart>
+
 
 
 <router-outlet></router-outlet>
