--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -2,7 +2,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Pavadinimas </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.name}} </td>
+      <td mat-cell *matCellDef="let transaction">{{transaction.item}} ALLAAL </td>
       <td mat-footer-cell *matFooterCellDef> Total </td>
     </ng-container>
   
@@ -14,23 +14,23 @@
     </ng-container>
 
     <!-- Cost Column -->
-    <ng-container matColumnDef="cost">
+    <ng-container matColumnDef="finalPrice">
         <th mat-header-cell *matHeaderCellDef> Kaina </th>
-        <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
+        <td mat-cell *matCellDef="let transaction"> {{transaction.item.finalPrice | currency}} </td>
         <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
       </ng-container>
 
       <!-- Brand Column -->
     <ng-container matColumnDef="brand">
         <th mat-header-cell *matHeaderCellDef> Markė </th>
-        <td mat-cell *matCellDef="let transaction"> {{transaction.brand}} </td>
+        <td mat-cell *matCellDef="let transaction"> {{transaction.item.brand}} </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <!-- Year Column -->
     <ng-container matColumnDef="year">
         <th mat-header-cell *matHeaderCellDef> Item </th>
-        <td mat-cell *matCellDef="let transaction"> {{transaction.year}} </td>
+        <td mat-cell *matCellDef="let transaction"> {{transaction.item.year}} </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
   
