--- a/frontend/src/app/part-list/part-list.component.html
+++ b/frontend/src/app/part-list/part-list.component.html
@@ -3,9 +3,9 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 </mat-form-field>
 
-<button mat-button color="primary" (click)="toggle('BMW')">BMW</button>
-<button mat-button color="primary" (click)="toggle('Audi')">Audi</button>
-<button mat-button color="primary" (click)="toggle('VW')">VW</button>
+<button mat-button color="primary" class="mat-raised-button" (click)="toggle('BMW')">BMW</button>
+<button mat-button color="primary" class="mat-raised-button" (click)="toggle('Audi')">Audi</button>
+<button mat-button color="primary" class="mat-raised-button" (click)="toggle('VW')">VW</button>
 
 <table mat-table
        matSort
@@ -13,9 +13,19 @@
        multiTemplateDataRows
        class="mat-elevation-z8">
 
-  <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of dataColumns">
     <th mat-header-cell *matHeaderCellDef> {{title[column]}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button
+              color="accent"
+              class="mat-raised-button"
+              (click)="addToCart(element)">{{langStrings.buy}}</button>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="expandedDetail">
@@ -23,26 +33,20 @@
       <div class="example-element-detail"
            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.position}} </div>
-          <div class="example-element-symbol"> {{element.symbol}} </div>
-          <div class="example-element-name"> {{element.name}} </div>
+          <div class="example-element-position"> {{element.gearbox}} </div>
+          <div class="example-element-symbol"> {{element.fuelType}} </div>
+          <div class="example-element-name"> {{element.power}} </div>
           <div class="example-element-weight"> {{element.weight}} </div>
-        </div>
-        <div class="example-element-description">
-          {{element.description}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
         </div>
       </div>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr (click)="addToCart(row)" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-  <!--  <tr mat-row *matRowDef="let element; columns: displayedColumns;"-->
-  <!--      class="example-element-row"-->
-  <!--      [class.example-expanded-row]="expandedElement === element"-->
-  <!--      (click)="expandedElement = expandedElement === element ? null : element">-->
-  <!--  </tr>-->
-  <!--  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
+  <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+      class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element"
+      (click)="expandedElement = expandedElement === element ? null : element">
+  </tr>
+<!--  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
 </table>
