--- a/frontend/src/app/part-list/part-list.component.html
+++ b/frontend/src/app/part-list/part-list.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <mat-label>Paieška</mat-label>
+  <mat-label>{{langStrings.search}}</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 </mat-form-field>
 
@@ -29,24 +29,29 @@
   </ng-container>
 
   <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.gearbox}} </div>
-          <div class="example-element-symbol"> {{element.fuelType}} </div>
-          <div class="example-element-name"> {{element.power}} </div>
-          <div class="example-element-weight"> {{element.weight}} </div>
-        </div>
+    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length"
+        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+      <div class="element-detail">
+          <div class=""> {{title.name}} {{element.name}} </div>
+          <div class=""> {{title.brand}} {{element.brand}} </div>
+          <div class=""> {{title.power}} {{element.power}} </div>
+          <div class=""> {{title.engineVolume}} {{element.engineVolume}} </div>
+          <div class=""> {{title.gearbox}} {{element.gearbox}} </div>
+          <div class=""> {{title.fuelType}} {{element.fuelType}} </div>
+          <div class=""> {{title.year}} {{element.year}} </div>
+          <div class=""> {{title.supplier}} {{element.supplier}} </div>
+          <div class=""> {{title.supplierAddress}} {{element.supplierAddress}} </div>
+          <div class=""> {{title.amount}} {{element.amount}} </div>
+          <div class=""> {{title.finalPrice}} {{element.finalPrice}} </div>
       </div>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let element; columns: displayedColumns;"
-      class="example-element-row"
+      class="element-row"
       [class.example-expanded-row]="expandedElement === element"
       (click)="expandedElement = expandedElement === element ? null : element">
   </tr>
-<!--  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 </table>
